# opengl_rendering_playground

./: CMakeLists.txt  CmakeLists.txt~  README.md  open_gl_glad_test
opengl_hello_rectangle/: CMakeCache.txt  Makefile  main.cpp~
opengl_hello_rectangle/include/: JarvisApplication.h  JarvisRenderer.h~
opengl_hello_rectangle/src/: JarvisRenderer.cpp
opengl_hello_triangle/: CMakeLists.txt~  cmake_install.cmake  header  open_gl_glad_test
opengl_hello_triangle/include/: JarvisRenderer.h
opengl_jarvis_shader/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  open_gl_glad_test
opengl_jarvis_shader/include/: JarvisRenderer.h  JarvisShader.h  JarvisShader.h~
opengl_jarvis_shader/src/: JarvisRenderer.cpp  JarvisRenderer.cpp~  JarvisShader.cpp  JarvisShader.cpp~  main.cpp  shader.frag  shader.vert~
src/: #JarvisRenderer.cpp#  #main.cpp#  .#JarvisRenderer.cpp  JarvisRenderer.cpp  JarvisRenderer.cpp~  main.cpp  main.cpp~
